--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,7 @@
 {
-  "functions": {
-    "app/api/**/*.js": {
-      "runtime": "@vercel/node"
-    }
-  },
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
-  "installCommand": "npm install"
+  "installCommand": "npm install",
+  "devCommand": "npm run dev"
 }
